add:
- search is non-blocking for st3
- jump command to jump:
  from .do and from search to code
  from code to .do


change:
- force init HTTP at first run
- all key bindings moved to [alt-d, alt-<key>]:
    alt+d - Set new todo state
    alt+f - Find todo by id or tag command
    alt+j - Jump to/from todo
    alt+i - Show inconsistent todos
    alt+h - Open HTTP repository

    alt+up - Raise priority
    alt+down - Lower priority

    alt+plus      - Set state to '+', 'Closed'
    alt+minus     - Set state to '-', 'Opened'
    alt+backspace
    alt+del       - Set state to '!', 'Canceled'
    alt+=         - Set state to '=', 'Progress'

- todo find simplified
- README is split


v1.9.0

fix:
- test template for redmine caused error in dozen setups. That was a regrettable fault caused with no need. Complete package review is going to be made.

new:
- mouse context menu added
- more todo comment prefixes added. Full list is:
  //    C, Javascript
  #     Unix shell, Python, Ruby
  %     Prolog, Erlang
  '     Vbasic
  ;     Lisp, Asm
  !     Fortran
  <!--  HTML
  --    SQL, Ada, Haskell


v1.8.11

new:
- seconds are stored in 'File', thus making 'apparently new/old' message obsolete
- 'File' stores reserved Id, so its now ok to have File-only database for collaborative use


v1.8.10

fix:
- database synchronisation fixed for multidbs: tasks were resaved with same stamp at startup (at least); live-edited db redefinitions now synchronised as well.
- new explicitely defined 'file' database was not created
- reserved ID was wrongly reset when switching all (even if one) databases onfly
- concurrent fetch() and flush() detected and removed
- jumping from search result for duplicated doplets started new search, not issue no more

change:
- reuse id for immediately canceled task
- engines internal error handling reviewed

issue: