@@ -12,8 +12,8 @@
 
 { "keys": ["alt+d","alt+space"], "command": "typetodo_set", "args": {"_state": ""}},
 
-{ "keys": ["alt+d","alt+keypad_minus"], "command": "typetodo_set", "args": {"_state": ""}},
-{ "keys": ["alt+d","alt+-"], "command": "typetodo_set", "args": {"_state": ""}},
+{ "keys": ["alt+d","alt+keypad_minus"], "command": "typetodo_set", "args": {"_state": "-"}},
+{ "keys": ["alt+d","alt+-"], "command": "typetodo_set", "args": {"_state": "-"}},
 
 { "keys": ["alt+d","alt+keypad_plus"], "command": "typetodo_set", "args": {"_state": "+"}},
 { "keys": ["alt+d","alt++"], "command": "typetodo_set", "args": {"_state": "+"}},
